[package]
name = "rasamukun"
version = "0.1.0"
authors = ["sinyo-matu <seelerei0130@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.20"
reqwest = "0.11.2"
serde = "1.0.125"
serde_json = "1.0.64"
serenity = "0.10.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
